test_regress/t/t_inst_recurse2_bad.out
%Error-UNSUPPORTED: t/t_inst_recurse2_bad.v:13:8: Unsupported: Identically recursive module (module instantiates itself, without changing parameters): 'looped'
                                                : ... note: In instance 't.looped.looped.looped'
   13 | module looped ( );
      |        ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
